@@ -4,4 +4,4 @@
 loaded graph nfl
 
 path from TOM-BRADY to ROB-GRONKOWSKI:
-ROB-GRONKOWSKI to TOM-BRADY via BUCS
+TOM-BRADY to ROB-GRONKOWSKI via BUCS
