@@ -2,12 +2,12 @@
 
 loaded graph nfl
 
-the children of TOM-BRADY in nfl are: MIKE-EVANS(BUCS) PEYTON-MANNING(RETIRED) ROB-GRONKOWSKI(PATRIOTS) ROB-GRONKOWSKI(RETIRED) ROB-GRONKOWSKI(BUCS) TRISTAN-WURFS(BUCS)
+the children of TOM-BRADY in nfl are: MIKE-EVANS(BUCS) PEYTON-MANNING(RETIRED) ROB-GRONKOWSKI(BUCS) ROB-GRONKOWSKI(PATRIOTS) ROB-GRONKOWSKI(RETIRED) TRISTAN-WURFS(BUCS)
 the children of PEYTON-MANNING in nfl are: ROB-GRONKOWSKI(RETIRED) RUSSEL-WILSON(BRONCOS) TOM-BRADY(RETIRED)
 the children of GENO-SMITH in nfl are: JORDYN-BROOKS(SEAHAWKS) RUSSEL-WILSON(SEAHAWKS)
 the children of GEORGE-KITTLE in nfl are: BROCK-PURDY(49RS)
 the children of DANIEL-JONES in nfl are: SAQUON-BARKLEY(GIANTS)
 the children of RUSSEL-WILSON in nfl are: GENO-SMITH(SEAHAWKS) JORDYN-BROOKS(SEAHAWKS) PEYTON-MANNING(BRONCOS)
 the children of MIKE-EVANS in nfl are: ROB-GRONKOWSKI(BUCS) TOM-BRADY(BUCS) TRISTAN-WURFS(BUCS)
-the children of ROB-GRONKOWSKI in nfl are: MIKE-EVANS(BUCS) PEYTON-MANNING(RETIRED) TOM-BRADY(PATRIOTS) TOM-BRADY(RETIRED) TOM-BRADY(BUCS) TRISTAN-WURFS(BUCS)
+the children of ROB-GRONKOWSKI in nfl are: MIKE-EVANS(BUCS) PEYTON-MANNING(RETIRED) TOM-BRADY(BUCS) TOM-BRADY(PATRIOTS) TOM-BRADY(RETIRED) TRISTAN-WURFS(BUCS)
 the children of PATRICK-MAHOMES in nfl are:
